fix(combobox): high contrast css update (#4912) * Properly apply the outline-none rule to focus state only * Replace box-shadow as border with real border in high contrast mode

--- a/src/components/combobox/combobox.scss
+++ b/src/components/combobox/combobox.scss
@@ -52,6 +52,12 @@
   @apply cursor-pointer flex-nowrap;
 }
 
+@media (forced-colors: active) {
+  .wrapper {
+    border: 1px solid canvasText;
+  }
+}
+
 .grid-input {
   @apply flex
     flex-grow
